# meiose

./: CMakeLists.txt  README.md  meiose.pro  meson.build  meson_options.txt
include/meiose/: debug.hpp  endian.hpp  exceptions.hpp  json.hpp  meiose.hpp  msgpack.hpp  variant.hpp
src/: debug.cpp  json.cpp  msgpack.cpp  variant.cpp
tests/: CMakeLists.txt  JsonReadTest.cpp  JsonWriteReadTest.cpp  JsonWriteTest.cpp  MsgpackWriteReadTest.cpp  TestUtils.hpp  VariantAssignPrimitiveTest.cpp  VariantAssignStructuresTest.cpp  VariantCastTest.cpp  VariantCopyMovePrimitiveTest.cpp  VariantCopyMoveStructuresTest.cpp  VariantCtorPrimitiveTest.cpp  VariantCtorStructuresTest.cpp  VariantIncorrectCastTest.cpp  VariantIsTypeTest.cpp  VariantTest.cpp  VariantUtilitiesTest.cpp
